[package]
edition = "2021"
name = "bad-apple-stm32"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.4"
defmt = "0.3.6"
defmt-rtt = "0.4.0"
defmt-macros = "=0.3.7" # TODO: remove once https://github.com/knurling-rs/defmt/pull/835 is merged and released
panic-probe = { version = "0.3.1", features = ["print-defmt"] }
ssd1306 = "0.8.4"
embedded-graphics = { version = "0.8.1", features = ["defmt"] }
display-interface = "0.4"
tinygif = { version = "0.0.4", features = ["defmt"] }

[dependencies.embassy-stm32]
git = "https://github.com/embassy-rs/embassy"
rev = "e1435195cb90f6298b236255b5248db2706aead7"
features = ["defmt", "stm32f401ce", "unstable-pac", "memory-x", "time-driver-any"]

[dependencies.embassy-executor]
git = "https://github.com/embassy-rs/embassy"
rev = "e1435195cb90f6298b236255b5248db2706aead7"
features = ["defmt", "arch-cortex-m", "executor-thread", "integrated-timers"]

[dependencies.embassy-futures]
git = "https://github.com/embassy-rs/embassy"
rev = "e1435195cb90f6298b236255b5248db2706aead7"
features = ["defmt"]

[dependencies.embassy-sync]
git = "https://github.com/embassy-rs/embassy"
rev = "e1435195cb90f6298b236255b5248db2706aead7"
features = ["defmt"]

[dependencies.embassy-time]
git = "https://github.com/embassy-rs/embassy"
rev = "e1435195cb90f6298b236255b5248db2706aead7"
features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"]


[[bin]]
name = "bad-apple-stm32"
test = false
bench = false

[profile.dev]
debug = true
lto = true
opt-level = 2
incremental = true

[profile.release]
debug = true # debuginfo is not actually flashed to the device!
lto = "fat"
opt-level = 2
incremental = false
